WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158319
global lexical environment variables are not accessible through functions created using the function constructor
https://bugs.webkit.org/show_bug.cgi?id=158319
Summary
global lexical environment variables are not accessible through functions cre...
Saam Barati
Reported
2016-06-02 14:55:44 PDT
...
Attachments
patch
(4.90 KB, patch)
2016-06-02 15:49 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-06-02 15:49:46 PDT
Created
attachment 280374
[details]
patch
Radar WebKit Bug Importer
Comment 2
2016-06-02 15:50:36 PDT
<
rdar://problem/26611696
>
Radar WebKit Bug Importer
Comment 3
2016-06-02 15:51:18 PDT
<
rdar://problem/26611672
>
WebKit Commit Bot
Comment 4
2016-06-02 16:50:43 PDT
Comment on
attachment 280374
[details]
patch Clearing flags on attachment: 280374 Committed
r201628
: <
http://trac.webkit.org/changeset/201628
>
WebKit Commit Bot
Comment 5
2016-06-02 16:50:48 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug