global lexical environment variables are not accessible through functions created using the function constructor https://bugs.webkit.org/show_bug.cgi?id=158319

Reviewed by Filip Pizlo.

When creating a function using the Function constructor, we were
using the global object instead of the global lexical environment
as the function's scope. We should be using the global lexical environment.

* runtime/FunctionConstructor.cpp:
(JSC::constructFunctionSkippingEvalEnabledCheck):
* tests/stress/function-constructor-reading-from-global-lexical-environment.js: Added.
(assert):
(test):
(ClassTDZ):


Canonical link: https://commits.webkit.org/176414@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201628 268f45cc-cd09-0410-ab3c-d52691b4dbfc